# async-downloader-demo

./: .gitignore  Makefile  README.md
dotnet/: Program.fs  demo.fsproj  fstest.fsproj
python/: pyproject.toml
python/src/: main.py
rust/: Cargo.toml
rust/src/: main.rs
