[project]
name = "testprj"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
include = ["src/"]

[tool.poetry]
name = "pyprj"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyright = "^1.1.394"
black = "^25.1.0"
asyncio = "^3.4.3"
aiohttp = "^3.11.13"
result = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
